--- a/index.html
+++ b/index.html
@@ -13,7 +13,47 @@
       <div class="menu-item settings" data-tab="settings">设置</div>
     </div>
     <div class="main-content">
-      <div class="gallery" id="gallery"></div>
+      <div class="tab-content active" id="images-tab">
+        <div class="search-container">
+          <input type="text" id="search-input" placeholder="" />
+          <select id="search-type">
+            <option value="filename"></option>
+            <option value="description"></option>
+          </select>
+          <button id="search-button"></button>
+        </div>
+        <div class="gallery" id="gallery"></div>
+      </div>
+      <div class="tab-content" id="settings-tab">
+        <div class="settings-page">
+          <h2>设置</h2>
+          <div class="setting-group">
+            <label for="theme-toggle">切换主题:</label>
+            <select id="theme-toggle">
+              <option value="light">浅色模式</option>
+              <option value="dark">深色模式</option>
+            </select>
+          </div>
+          <div class="setting-group">
+            <label for="language-select">选择语言:</label>
+            <select id="language-select">
+              <option value="zh-CN">中文</option>
+              <option value="en">English</option>
+            </select>
+          </div>
+          <div class="setting-group">
+            <label for="api-url">AI API 地址:</label>
+            <input type="text" id="api-url" placeholder="输入 AI API 地址" />
+          </div>
+          <div class="setting-group">
+            <label for="api-key">AI API 密钥:</label>
+            <input type="password" id="api-key" placeholder="输入 AI API 密钥" />
+          </div>
+          <div class="setting-group">
+            <button id="save-settings" class="save-btn">保存设置</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="fullscreen-overlay" id="fullscreenOverlay">
